# -Qt-Creator-cpp-

./: CMakeLists.txt  CMakeUserPresets.json  README.md  dispatchsystem.cpp  dispatchsystem.h  driver.cpp  driver.h  driverwindow.cpp  driverwindow.h  driverwindow.ui  loginwindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapdata.cpp  mapdata.h  order.cpp  order.h  ordermanager.cpp  ordermanager.h  passenger.cpp  passenger.h  passengerwindow.cpp  passengerwindow.h  passengerwindow.ui  pathplanner.cpp  pathplanner.h  platformwindow.cpp  platformwindow.h  platformwindow.ui  user.cpp  user.h  workerthread.cpp  workerthread.h  工程逻辑与原理.md
.trae/documents/: Remove Unused Favorite Address Functions.md
